test/expected/cli/shitbox_error_notes.out
=== killall arg count ===
shit: 1:1: error: killall expects one process name.
     1 |  shitbox killall a b
       |  ^~~~~~~~~~~~~~~~~~~ here.
note: Pass one name, e.g. `killall firefox`.
=== seq zero increment ===
shit: 1:1: error: seq: the increment must not be zero.
     1 |  shitbox seq 1 0 10
       |  ^~~~~~~~~~~~~~~~~~ here.
note: Give a non-zero step, e.g. `seq 1 2 10`.
=== ln without -s ===
shit: 1:1: error: ln supports only symbolic links.
     1 |  shitbox ln a b
       |  ^~~~~~~~~~~~~~ here.
note: Re-run with `-s` to make a symlink.
=== tr one set ===
shit: 1:1: error: tr expects two sets unless -d is given.
     1 |  shitbox tr abc
       |  ^~~~~~~~~~~~~~ here.
note: Supply SET1 and SET2, or use `-d` with one set.
=== find bad -type ===
shit: 1:1: error: find: -type expects one of f, d, or l.
     1 |  shitbox find . -type x
       |  ^~~~~~~~~~~~~~~~~~~~~~ here.
note: Pass `f`, `d`, or `l` after `-type`.
